# BossClone

./: .gitignore  BossClone.sln  CMakeKits.json  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md  copy-assets.cmake
Application/: Application.vcxproj  Application.vcxproj.filters  CMakeLists.txt  imgui.ini
Application/Assets/: Low_Poly_Tree_006.mtl  fl.mtl  hutao.mtl  poppychibi.tga  teddy.mtl
Application/Assets/Arcade/: arcade.mtl
Application/Assets/Arcade/ClawMachine/: ClawMachineBody.mtl  ClawMachineClaw2.mtl  ClawMachineClaw3.mtl  ClawMachineClawBase.mtl
Application/Assets/Arcade/DDR/: untitled.mtl
Application/Assets/Arcade/Light/: untitled.mtl
Application/Assets/Arcade/Plush1/: untitled.mtl
Application/Assets/Arcade/PoolTable/: untitled.mtl
Application/Assets/Arcade/Table/: untitled.mtl
Application/Assets/Ball/: ball.mtl
Application/Assets/BumperCar/: Car.mtl
Application/Assets/Fountain_08_obj/: Fountain 8 (obj).3DS
Application/Assets/Jinx/: JinxUPT3.mtl
Application/Assets/MainScene/: caveterrainblendmap1.xcf
Application/Assets/Maps/: FillerMap.csv  SimulationMap.csv  SimulationMapTypes.csv  TestMap.csv  TestMapTypes.csv  TwentyFiveMap.csv  TwentyFiveMapTypes.csv  VisibilityMap.csv
Application/Assets/Pillar/: pillar.mtl
Application/Assets/Sounds/: menu_01.xmp  woodbreak.xmp  woodhit.xmp
Application/Assets/Tree 02/: Tree.mtl
Application/Assets/export/: pinetree.mtl
Application/Assets/fonts/: inconsolata.csv
Application/Assets/fountain/: fountain.mtl
Application/Assets/girl/: Readme.txt  girl cute 9.mtl
Application/Assets/lantern/: lantern.mtl
Application/Assets/player/: leftleg.mtl  torso.mtl
Application/Assets/rockpile/: rockpile.mtl  rocks.mtl
Application/Assets/teddy/: teddy.mtl
Application/Assets/tree/: tree.mtl
Application/Shader/: SimpleFragmentShader.fragmentshader  Texture.glsl  basic.vertexshader  billboard.fragmentshader  billboard.vertexshader  blinnphong.fragmentshader  blinnphong.vertexshader  blinnphongillum0.fragmentshader  blinnphongillum1.fragmentshader  comg.fragmentshader  comg.vertexshader  envmap.fragmentshader  envmap.vertexshader  multitexture.fragmentshader  multitexturespecular.fragmentshader  normalmaps.fragmentshader  normalmaps.vertexshader  phong.fragmentshader  phong.vertexshader  skybox.fragmentshader  skybox.vertexshader  unlitshader.fragmentshader  unlitshader.vertexshader
Application/Shader/Experimental/: BlinnPhong.fragmentshader  BlinnPhongNormalMap.fragmentshader  BlinnPhongNormalMap.vertexshader  IllumOne.fragmentshader  IllumOne.vertexshader  IllumZero.fragmentshader  IllumZero.vertexshader  Text.fragmentshader
Application/Source/: main.cpp
Application/Source/Audio/: Transition.cpp  Transition.h
Application/Source/Components/: AABB.cpp  AABB.h  AABB2D.cpp  AABB2D.h  Ahri.cpp  Ahri.h  BoostPlatform.cpp  BoostPlatform.h  BoundingCircle.cpp  BoundingCircle.h  BoundingSphere.cpp  BoundingSphere.h  BoundingVolume.cpp  BoundingVolume.h  BoundingVolume2D.cpp  BoundingVolume2D.h  BoxCollider.cpp  BoxCollider.h  BoxCollider2D.cpp  BoxCollider2D.h  BumperCarController.cpp  BumperCarController.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CarouselMovement.cpp  CarouselMovement.h  CircleCollider2D.cpp  CircleCollider2D.h  ClawMachineController.cpp  ClawMachineController.h  Collider.cpp  Collider.h  Collider2D.cpp  Collider2D.h  Component.cpp  Component.h  Confetti.cpp  Confetti.h  (+74 more)
Application/Source/Core/: Application.cpp  Application.h  Core.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timestep.h  Window.cpp  Window.h
Application/Source/EC/: Component.cpp  Component.h  GameObject.cpp  GameObject.h
Application/Source/ECS/: Component.h  ComponentArray.h  ComponentManager.h  Coordinator.cpp  Coordinator.h  Entity.cpp  Entity.h  IComponentArray.h  System.h  SystemManager.h
Application/Source/Events/: ApplicationEvent.h  Event.h  EventDispatcher.h  EventManager.h  KeyEvent.h  MouseEvent.h
Application/Source/Game/: ActionEntry.h  EightWayDirection.h  EightWayDirectionFlags.h  EnemyPool.cpp  EnemyPool.h  GameManager.cpp  GameManager.h  MainLayer.cpp  MainLayer.h  MenuLayer.cpp  MenuLayer.h  MessageMethod.h  OrthographicCameraController.cpp  OrthographicCameraController.h  SceneLayer.cpp  SceneLayer.h  State.h  StateMachine.h  StateMessageMethod.h  Tilemap.cpp  Tilemap.h  TimedTransition.h  Transition.h
Application/Source/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Application/Source/Physics/: Bounds.cpp  Bounds.h  ColliderManager.cpp  ColliderManager.h  Collision.cpp  Collision.h  Collision2D.cpp  Collision2D.h  Contact.h  PhysicsComponent.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsWorld.cpp  PhysicsWorld.h  Quadtree.h
Application/Source/Renderer/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer2D.cpp  Renderer2D.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Application/Source/Scene/: ArcadeScene.cpp  ArcadeScene.h  BottleThrowScene.cpp  BottleThrowScene.h  BumperCarScene.cpp  BumperCarScene.h  DebugScene.cpp  DebugScene.h  GameObject.cpp  GameObject.h  JungleScene.cpp  JungleScene.h  LoadingScene.cpp  LoadingScene.h  MainMenuScene.cpp  MainMenuScene.h  MainScene.cpp  MainScene.h  PoolTableScene.cpp  PoolTableScene.h  Scene.cpp  Scene.h  Scene1.cpp  Scene1.h  SceneLayer.cpp  SceneLayer.h  SceneManager.cpp  SceneManager.h
Application/Source/Utils/: DFS.cpp  DFS.h  Font.cpp  Font.h  Heuristic.h  Input.cpp  Input.h  LoadOBJ.cpp  LoadOBJ.h  LoadTGA.cpp  LoadTGA.h  MusicPlayer.cpp  MusicPlayer.h  Random.h  Singleton.h  SoundController.cpp  SoundController.h  SoundInfo.cpp  SoundInfo.h  TextureManager.cpp  TextureManager.h  Util.cpp  Util.h  Vertex.h  filesystem.h
(+96 files in other folders)
